--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body class="bg-white dark:bg-gray-800">
 
     <!-------------- nav section -------------->
-    <header class="md:mx-14 md:py-4 mx-2 my-2 header">
-        <nav class="container mx-auto flex items-center justify-between md:mx-auto">
+    <header class="md:mx-14 md:py-4 sms:mx-1 sm:mx-12 mx-2 my-2 header">
+        <nav class="container mx-auto flex items-center justify-between md:mx-auto sms:w-full sms:justify-evenly">
             <div class="flex items-center gap-1 md:gap-3">
                 <a href="index.html"></a>
-                    <img class="w-16 md:w-[80px]" src="images/tai-logo.png" 
+                    <img class="w-16 md:w-[80px] sms:w-12 sm:w-14 sms:left-0" src="images/tai-logo.png" 
                     alt="">
                 </a>
                 <p class="text-[10px] md:text-[13px] dark:text-white">
